force-app/main/default/objects/MUSW__Parcel_Relationship__c/MUSW__Parcel_Relationship__c.object-meta.xml
<CustomObject>
    <description>Defines the relationships between different parcels such as ancestors and descendants.</description>
    <label>Parcel Relationship</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcel Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>