force-app/main/default/objects/MUSW__Parcel_Relationship__c/fields/MUSW__Action__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Merge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>