force-app/main/default/objects/MUSW__Parcel_Relationship__c/fields/MUSW__Recorded_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Recorded_Date__c</fullName>
    <label>Recorded Date</label>
    <type>Date</type>
</CustomField>