force-app/main/default/objects/MUSW__Parcel_Relationship__c/fields/MUSW__Related_Parcel__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Related_Parcel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Parcel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Parcel__c.MUSW__Historic__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Parcel__c</referenceTo>
    <relationshipLabel>Related Parcels</relationshipLabel>
    <relationshipName>Related_Parcels</relationshipName>
    <type>Lookup</type>
</CustomField>