force-app/main/default/objects/MUSW__Parcel_Relationship__c/validationRules/MUSW__Parcel_Cannot_Be_Related_To_Itself.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Parcel_Cannot_Be_Related_To_Itself</fullName>
    <active>true</active>
    <description>Parcel cannot be related to itself.</description>
    <errorConditionFormula>AND(NOT( ISNULL( MUSW__Parcel__c ) ),NOT( ISNULL( MUSW__Related_Parcel__c ) ),(MUSW__Parcel__c ==  MUSW__Related_Parcel__c ) )</errorConditionFormula>
    <errorDisplayField>MUSW__Related_Parcel__c</errorDisplayField>
    <errorMessage>Parcel cannot be related to itself. Select a different Related Parcel.</errorMessage>
</ValidationRule>